syntax = "proto3";
package fibonacci;

message FibonacciRequest {
  int32 n = 1;
};

message FibonacciResponse {
  int32 f_n = 1;
};

message JoinedFibonacciResponse {
  string joined_f_n = 1;
}

message SwitchRequest {}

service FibonnaciService {
  rpc GetFibonnaciNumber(FibonacciRequest) returns (FibonacciResponse);
  rpc GetAllFibonacciNumbers(FibonacciRequest) returns (stream FibonacciResponse);
  rpc JoinFibonacciNumbers(stream FibonacciRequest) returns (JoinedFibonacciResponse);
  rpc ElevatorFibonacci(stream SwitchRequest ) returns (stream FibonacciResponse);
}